--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
