--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
