--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -20,6 +21,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
