--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
