--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.3",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
