--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-phone-number-input": "^3.4.9",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "yup": "^1.4.0"
