--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@googlemaps/markerclusterer": "^2.5.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.8.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.15",
@@ -20,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "ldrs": "^1.0.2",
