--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.3",
     "react-phone-input-2": "^2.15.1",
