--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.3.0",
