--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -37,6 +40,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
