--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googlemaps/markerclusterer": "^2.5.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.2",
     "@mui/x-date-pickers": "^8.8.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.2.7",
