--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
