--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@googlemaps/markerclusterer": "^2.5.1",
+    "@mui/material": "^7.3.1",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.15",
