--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@googlemaps/markerclusterer": "^2.5.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.2.7",
@@ -31,6 +32,7 @@
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
