--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -50,6 +51,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "speakeasy": "^2.0.0",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
